fix(api-history): summary word wrap (#643)

--- a/src/components/ApiHistoryTable.module.scss
+++ b/src/components/ApiHistoryTable.module.scss
@@ -8,6 +8,8 @@
     font-weight: normal;
     font-style: italic;
 
+    word-wrap: normal;
+
     &:hover {
       cursor: pointer;
     }
